<resources>
    <string name="app_name">WeatherPlusMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="position" translatable="false">position</string>
    <string name="title">Title</string>
    <string name="explore">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="humidity">Humidity</string>
    <string name="next_5_days">Next 5 Days</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="about_app">About app</string>
    <string name="search">Search</string>
    <string name="about_app_full_text">Weatherapp is a simple forecast app, which uses some APIs to fetch 5 day / 3 hour forecast data from the OpenWeatherMap and to fetch places,cities,counties,coords etc. from Algolia Places. The main goal of this app is to be a sample of how to build an high quality Android application that uses the Architecture components, Dagger etc. in Kotlin.</string>
    <string name="github_url">https://github.com/furkanaskin/Weatherapp</string>
    <string name="see_on_github">See on Github</string>
    <string name="dismiss">Dismiss</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="unexpected_exception">unexpected_exception</string>
    <string name="start_typing">Start typing for find your location…</string>

    <string name="province">استان</string>
    <string name="county">شهرستان</string>
    <string name="neighborhood">محله</string>

    <string name="hyphen">\u0020-\u0020</string>
    <string name="space">&#160;</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>


</resources>
