<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.slimshady.weather.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >


        <argument
            android:name="lat"
            app:argType="string"
            android:defaultValue="No message"
          />

        <argument
            android:name="lon"
            app:argType="string"
            android:defaultValue="No message"
            />

    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.slimshady.weather.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search">



        <action
            android:id="@+id/action_nav_search_to_nav_home"
            app:destination="@id/nav_home" >


        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.slimshady.weather.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.slimshady.weather.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.slimshady.weather.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.slimshady.weather.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.slimshady.weather.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>